# Basic_Maths

./: Basic_Maths.py  README.md  basic_maths_calc.py  install.bat  install.bat_readme.txt  install.sh  lib_ver_info.py  library_func.py  pyproject.toml  test.py  test.txt
Basic_Maths/: Basic_Maths.py  Basic_maths.py  __init__.py  basic_maths.py  lib_ver_info.py  library_func.py
Basic_Maths/Lib/: file.py  lib.py  parameters.py
Example/: basic_maths_calc.py
PyAppDevKit/InfoLib/: pyappdevkit_info.py
PyAppDevKit/LibFunc/: lib.py  pyappdevkit.py  pyappdevkit_info.py
PyAppDevKit/PyAppDevKit/: parameters.py  pyappdevkit.py  pyappdevkit_info.py
