[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "LXLM-Basic-Maths"
version = "6.7"
description = "LXLM-Basic_Maths is a lightweight, minimal, and easy-to-use Python library designed for performing basic mathematical operations quickly and simply, without unnecessary complexity."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "LinuxUsersLinuxMint"}
]
dependencies = ["pyappdevkit>=2.2"]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/LinuxUsersLinuxMint/LXLM-Basic_Maths"

Source = "https://github.com/LinuxUsersLinuxMint/LXLM-Basic_Maths" 

